# fastapibuildingblocks

./: .clinerules  .cursorrules  .dockerignore  .gitignore  CONFIGURABLE_PATTERNS_SUMMARY.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  EXCEPTION_HANDLER.md  GETTING_STARTED.md  INBOX_OUTBOX_CONFIG.md  INBOX_OUTBOX_PATTERN.md  KAFKA_IMPLEMENTATION_SUMMARY.md  KAFKA_INTEGRATION.md  MEDIATOR_IMPLEMENTATION_SUMMARY.md  MEDIATOR_PATTERN.md  MIDDLEWARE_LOGGING.md  Makefile  OBSERVABILITY.md  README.md  REDACTION_SUMMARY.md  REDIS_API_GUIDE.md  REDIS_UI_GUIDE.md  RELEASE_SUMMARY.md  RUNNING_SERVICES.md  create_inbox_outbox_tables.sql  demo_http_client.py  demo_middleware.py  demo_redaction.py  demo_redis_cache.py  docker-compose.kafka.yml  docker-compose.observability.yml  docker-compose.redis.yml  example_configurable_inbox_outbox.py  example_kafka_integration.py  example_redaction.py  pyproject.toml  test_inbox_outbox_demo.py  test_inbox_outbox_simple.py  (+7 more)
.github/: copilot-instructions.md
docs/: CONFIGURABLE_PATTERNS_SUMMARY.md  CONTRIBUTING.md  DATABASE_ARCHITECTURE.md  HTTP_CLIENT.md  INBOX_OUTBOX_CONFIG.md  INDEX.md  KAFKA_IMPLEMENTATION_SUMMARY.md  KAFKA_QUICKSTART.md  MEDIATOR_IMPLEMENTATION_SUMMARY.md  POSTGRES_PGADMIN.md  QUICK_REFERENCE.md  REDIS_CACHE.md
example_service/: .dockerignore  .env.example  Dockerfile  EXTERNAL_API_INTEGRATION.md  Makefile  PROJECT_OVERVIEW.md  README.md  create_inbox_outbox.sql  docker-compose.yml  init.sql  pgadmin_servers.json  pgpass  requirements.txt  start.sh  test_api.py  test_external_api.sh
example_service/app/: main.py
example_service/app/api/: dependencies.py
example_service/app/api/v1/: api.py
example_service/app/application/: dtos.py
example_service/app/application/commands/: message_commands.py  user_commands.py
example_service/app/application/handlers/: message_command_handlers.py  message_integration_handlers.py  message_query_handlers.py  user_command_handlers.py  user_query_handlers.py
example_service/app/application/queries/: message_queries.py  user_queries.py
example_service/app/core/: config.py  database.py
example_service/app/domain/entities/: message.py
example_service/app/domain/events/: message_events.py  user_events.py
example_service/app/domain/models/: user.py
example_service/app/domain/repositories/: user_repository.py
example_service/app/infrastructure/repositories/: postgres_user_repository.py  user_repository.py
example_service/docs/: PROJECT_OVERVIEW.md
example_service/tests/: test_users_api.py
examples/: README.md  demo_exception_handler.py  demo_redaction.py  demo_redis_api.py  example_config_with_redis.py  example_configurable_inbox_outbox.py  example_kafka_integration.py  test_inbox_outbox_simple.py  test_kafka_simple.py  test_mediator.py  test_middleware_logging.py  test_redis_api.py
observability/: loki.yaml  otel-collector-config.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
observability/grafana/dashboards/: dashboard-provider.yaml
observability/grafana/dashboards/json/: fastapi-dashboard.json
observability/grafana/datasources/: datasources.yaml
observability_dotnet/alertmanager/: alertmanager.yml
observability_dotnet/grafana/dashboards/: aspirearch-overview.json  aspirearch-overview.json.backup
observability_dotnet/grafana/provisioning/dashboards/: dashboard.yml
observability_dotnet/grafana/provisioning/datasources/: datasources.yml
observability_dotnet/loki/: loki-config.yml
observability_dotnet/otel-collector/: otel-collector-config.yml
observability_dotnet/prometheus/: alerts.yml  prometheus.yml
observability_dotnet/promtail/: promtail-config.yml
observability_dotnet/tempo/: tempo.yml
src/building_blocks/api/: __init__.py
src/building_blocks/api/exceptions/: __init__.py  handler.py  problem_details.py
src/building_blocks/api/middleware/: __init__.py
src/building_blocks/application/: __init__.py
src/building_blocks/application/dtos/: __init__.py
src/building_blocks/application/handlers/: base.py
src/building_blocks/application/mediator/: __init__.py  base.py  registry.py
src/building_blocks/domain/: __init__.py
src/building_blocks/infrastructure/: __init__.py
src/building_blocks/observability/: logging.py  metrics.py  middleware.py  redaction.py
src/fastapi_building_blocks/: __init__.py
src/fastapi_building_blocks/application/: __init__.py
src/fastapi_building_blocks/infrastructure/: __init__.py
src/fastapi_building_blocks/observability/: __init__.py  config.py  logging.py  middleware.py  tracing.py
tests/: test_kafka_integration.py  test_redaction.py
tests/domain/: test_entities.py
(+69 files in other folders)
