[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-building-blocks"
version = "0.1.0"
description = "Reusable building blocks for FastAPI applications with Domain-Driven Design architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["fastapi", "ddd", "domain-driven-design", "architecture", "building-blocks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # HTTP Client
    "httpx>=0.25.0",
    # OpenTelemetry Core
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    # OpenTelemetry Instrumentation
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    # OpenTelemetry Exporters (OTLP for Tempo, Prometheus)
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    # Prometheus client for metrics
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]
messaging = [
    "pika>=1.3.0",  # RabbitMQ
    "redis>=5.0.0",
    "aiokafka>=0.10.0",  # Kafka
    "pydantic-settings>=2.0.0",  # For Kafka configuration
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-building-blocks"
Repository = "https://github.com/yourusername/fastapi-building-blocks"
Documentation = "https://github.com/yourusername/fastapi-building-blocks/blob/main/README.md"

[project.scripts]
fastapi-bb = "building_blocks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
